# ampere

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  demo_pyphot.ipynb  example.py  example2.py  pyproject.toml  setup.py
ampere/: ClassRT.py  Dusty.py  Hyperion.py  PowerLawAGN.py  QuickSED.py  __init__.py  basesearch.py  class_reqs  data.py  dynestysearch.py  emceesearch.py  extinction.py  first_ext_starmod.py  logger.py  models.py  starModels.py  starScreen.py  test_Dusty.py
ampere/Opacities/: pyr_c_b.q  ss_Dorschneretal1995_Olivine_0.10_sub.q
ampere/Opacities_Sascha/: Mg60Fe40_2_SiO4_Henning.q  MgSiO3_Henning.q  mg2sio4_jena_cr_av_50k_cde.q  nk2_Mg07Fe03SiO3_X.q
ampere/Opacities_Sascha_sel/: Koike1999_forsterite01_ext.q  Mg07Fe03SiO3_Dorschner_DHS.q  Mg08Fe02SiO3_Dorschner_DHS.q  Mg70Fe30SiO3_Henning.q  MgSiO3_Dorschner_DHS.q  fe2sio4_cr_cde01.q  mgsio3_cr_cde01.q  nk_Mg2SiO4-Jena.q
ampere/Testdata/: 4c_09.72.vot  all_low_res2_nolines.fits  all_low_res2_nolines_hd.fits  cassis_tbl_spcfw_14203136t.tbl  cassis_yaaar_optdiff_9834496.fits  cassis_yaaar_spcfw_14203136t.fits  cassis_yaaar_spcfw_27570176t.fits  cassis_yaaar_spcfw_9834496t.fits  (+7 more)
examples/: NGC6302-calculate-dust-mass.py  NGC6302-opacities.txt  NGC6302.py  NGC6302_old.py  NGC6302_zeus.py  both  cstar_model_test_sbi_v2.py  cstar_model_test_sbi_v2_embedding.py  example.py  minimal_working_example.py  minimal_working_example_dynesty.py  minimal_working_example_sbi.py  minimal_working_example_sbi_embedding.py  minimal_working_example_tmnre.py  minimal_working_example_zeus.py  modbbtest.py  modelClio.py  pgQuasarSample.py  rebintest.py  star_disc.py  ysoSilFit.py
jwst_test_model/: black_body_jwst_model.py  blackbody_jwst.txt  creating_ext_model.py  creating_model.py  ext_jwst.txt  ext_jwst2.txt  ext_jwst3.txt  ext_jwst4.txt  ext_jwst_rebin.txt  ext_jwst_test.txt  extinction_Mg07Fe03SiO3_Dorschner.q_Koike1999_forsterite01_ext.q_av7.0_2kpc.txt  fitting_bb_and_dust.py  fitting_bb_model.py  fitting_stellarmodel_dust.py  no_slope_ext_jwst5.txt  old_pgquasars.py  readme
phiresstarter/: ClassRT.py  __init__.py  base_likelihood.py  basesearch.py  data.py  emceesearch.py  extinction.py  pyphot_wrapper.py
small_silicates/: cygob_2_12_lines_incl.py  cygob_2_12_revisited.py  cygob_2_12_stellar_mod.py  cygob_2_12_test.py  cygob_2_12_test_ext.py  cygob_2_12_test_withguess.py  new_data.py  new_table.vot  output.vot  readin_log.py  readin_log2.py  ssap.txt  test_hr_data.py
(+161 files in other folders)
